RESOLVED FIXED 280602
[GTK][WPE][Skia] REGRESSION: 284207@main - CPU rendering performed in wrong color type
https://bugs.webkit.org/show_bug.cgi?id=280602
Summary [GTK][WPE][Skia] REGRESSION: 284207@main - CPU rendering performed in wrong c...
Nikolas Zimmermann
Reported 2024-09-30 01:47:15 PDT
In 284207@main we decided to switch back to BGRA pixel format for UnacceleratedBuffer, when CPU rendering is used. However, we forgot to switch the actual Skia rendering to BGRA as well -- fix that.
Attachments
Nikolas Zimmermann
Comment 1 2024-09-30 01:48:04 PDT
EWS
Comment 2 2024-09-30 02:33:42 PDT
Committed 284444@main (447bcbf92118): <https://commits.webkit.org/284444@main> Reviewed commits have been landed. Closing PR #34443 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.