[GTK][WPE][Skia] REGRESSION: 284207@main - CPU rendering performed in wrong color type https://bugs.webkit.org/show_bug.cgi?id=280602

Reviewed by Miguel Gomez.

In 284207@main we decided to switch back to BGRA pixel format for
UnacceleratedBuffer, when CPU rendering is used. However, we forgot
to switch the actual Skia rendering to BGRA as well -- fix that.

Covered by existing tests.

* Source/WebCore/platform/graphics/nicosia/NicosiaBuffer.cpp:
(Nicosia::UnacceleratedBuffer::tryEnsureSurface):

Canonical link: https://commits.webkit.org/284444@main